--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,11 @@ packages =
     vmware_nsx
 namespace_packages =
     vmware_nsx
-
+[entry_points]
+vmware_nsx.neutron.nsxv.router_type_drivers =
+    shared = vmware_nsx.neutron.plugins.vmware.plugins.nsx_v_drivers.shared_router_driver:RouterSharedDriver
+    distributed = vmware_nsx.neutron.plugins.vmware.plugins.nsx_v_drivers.distributed_router_driver:RouterDistributedDriver
+    exclusive = vmware_nsx.neutron.plugins.vmware.plugins.nsx_v_drivers.exclusive_router_driver:RouterExclusiveDriver
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
