--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ netaddr>=0.7.12
 SQLAlchemy>=0.9.7,<=0.9.99
 six>=1.7.0
 stevedore>=1.1.0  # Apache-2.0
+oslo.concurrency>=0.3.0,!=0.4.0
 oslo.config>=1.4.0  # Apache-2.0
 oslo.db>=1.1.0  # Apache-2.0
 oslo.i18n>=1.0.0  # Apache-2.0
