Update .gitignore file
Remove neutron and quantum. Add vmware_nsx

Change-Id: I120c1af0bccf7bea84b5f22b231b5c7a68740a17

--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,8 @@ dist/
 doc/build
 *.DS_Store
 *.pyc
-neutron.egg-info/
-neutron/vcsversion.py
-neutron/versioninfo
+vmware_nsx.egg-info/
 pbr*.egg/
-quantum.egg-info/
-quantum/vcsversion.py
-quantum/versioninfo
 run_tests.err.log
 run_tests.log
 setuptools*.egg/
