--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ oslo.i18n>=1.0.0  # Apache-2.0
 oslo.log>=0.1.0  # Apache-2.0
 oslo.serialization>=1.0.0               # Apache-2.0
 oslo.utils>=1.1.0                       # Apache-2.0
+oslo.vmware>=0.9.0                      # Apache-2.0
