Use pretty_tox for running unit tests
Because it looks nicer, if nothing else.

Change-Id: I5bad21b84bcf0cc425aa200f7045f80f53d2d813

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,10 @@ install_command = pip install -U {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 whitelist_externals = sh
-commands = python setup.py testr --slowest --testr-args='{posargs}'
+commands =
+  sh tools/pretty_tox.sh '{posargs}'
+# there is also secret magic in pretty_tox.sh which lets you run in a fail only
+# mode. To do this define the TRACE_FAILONLY environmental variable.
 
 [testenv:hashtest]
 # This is the same as default environment, but with a random PYTHONHASHSEED.
