--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pbr>=0.6,!=0.7,<1.0
 eventlet>=0.15.2
 httplib2>=0.7.5
 netaddr>=0.7.12
+retrying>=1.2.3,!=1.3.0 # Apache-2.0
 SQLAlchemy>=0.9.7,<=0.9.99
 six>=1.7.0
 stevedore>=1.1.0  # Apache-2.0
