Add check-nsx-config to console scripts
This script is moving from openstack/neutron to stackforge/vmware-nsx,
and should therefore be installed with the latter package.

Change-Id: If1f1a3b55d5e68658f63a759dbad7e616ed14eca

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,8 @@ packages =
 namespace_packages =
     vmware_nsx
 [entry_points]
+console_scripts =
+    neutron-check-nsx-config = vmware_nsx.neutron.plugins.vmware.check_nsx_config:main
 vmware_nsx.neutron.nsxv.router_type_drivers =
     shared = vmware_nsx.neutron.plugins.vmware.plugins.nsx_v_drivers.shared_router_driver:RouterSharedDriver
     distributed = vmware_nsx.neutron.plugins.vmware.plugins.nsx_v_drivers.distributed_router_driver:RouterDistributedDriver
