--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,6 @@ oslo.concurrency>=0.3.0,!=0.4.0
 oslo.config>=1.4.0  # Apache-2.0
 oslo.db>=1.1.0  # Apache-2.0
 oslo.i18n>=1.0.0  # Apache-2.0
+oslo.log>=0.1.0  # Apache-2.0
 oslo.serialization>=1.0.0               # Apache-2.0
 oslo.utils>=1.1.0                       # Apache-2.0
