--- a/tox.ini
+++ b/tox.ini
@@ -81,5 +81,5 @@ commands =
   pylint --rcfile=.pylintrc --output-format=colorized {posargs:vmware_nsx/neutron}
 
 [hacking]
-import_exceptions = neutron.i18n
+import_exceptions = vmware_nsx.openstack.common._i18n
 local-check-factory = neutron.hacking.checks.factory
