--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ oslo.log>=0.1.0  # Apache-2.0
 oslo.serialization>=1.0.0               # Apache-2.0
 oslo.utils>=1.1.0                       # Apache-2.0
 oslo.vmware>=0.9.0                      # Apache-2.0
+tooz>=0.13.1                            # Apache-2.0
