--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 # The order of packages is significant, because pip processes them in the order
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
-pbr>=0.6,!=0.7,<1.0
+pbr>=0.11,<2.0
 
-eventlet>=0.15.2
+eventlet>=0.17.3
 httplib2>=0.7.5
 netaddr>=0.7.12
 retrying>=1.2.3,!=1.3.0 # Apache-2.0
-SQLAlchemy>=0.9.7,<=0.9.99
-six>=1.7.0
-stevedore>=1.1.0  # Apache-2.0
-oslo.concurrency>=0.3.0,!=0.4.0
-oslo.config>=1.4.0  # Apache-2.0
-oslo.db>=1.1.0  # Apache-2.0
-oslo.i18n>=1.0.0  # Apache-2.0
-oslo.log>=0.1.0  # Apache-2.0
-oslo.serialization>=1.0.0               # Apache-2.0
-oslo.utils>=1.1.0                       # Apache-2.0
-oslo.vmware>=0.9.0                      # Apache-2.0
-tooz>=0.13.1                            # Apache-2.0
+SQLAlchemy>=0.9.7,<1.1.0
+six>=1.9.0
+stevedore>=1.5.0  # Apache-2.0
+oslo.concurrency>=2.0.0         # Apache-2.0
+oslo.config>=1.11.0  # Apache-2.0
+oslo.db>=1.10.0  # Apache-2.0
+oslo.i18n>=1.5.0  # Apache-2.0
+oslo.log>=1.2.0  # Apache-2.0
+oslo.serialization>=1.4.0               # Apache-2.0
+oslo.utils>=1.4.0                       # Apache-2.0
+oslo.vmware>=0.13.1                     # Apache-2.0
+tooz>=0.13.1 # Apache-2.0
