--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ oslo.db>=1.12.0 # Apache-2.0
 oslo.i18n>=1.5.0 # Apache-2.0
 oslo.log>=1.2.0 # Apache-2.0
 oslo.serialization>=1.4.0 # Apache-2.0
+oslo.service>=0.1.0 # Apache-2.0
 oslo.utils>=1.6.0 # Apache-2.0
 oslo.vmware>=0.13.1 # Apache-2.0
 tooz>=0.16.0 # Apache-2.0
