--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,18 @@
 # process, which may cause wedges in the gate later.
 pbr>=0.6,!=0.7,<1.0
 
-eventlet>=0.15.2
+eventlet>=0.16.1,!=0.17.0
 httplib2>=0.7.5
 netaddr>=0.7.12
 retrying>=1.2.3,!=1.3.0 # Apache-2.0
 SQLAlchemy>=0.9.7,<=0.9.99
 six>=1.7.0
-stevedore>=1.1.0  # Apache-2.0
-oslo.concurrency>=0.3.0,!=0.4.0
-oslo.config>=1.4.0  # Apache-2.0
-oslo.db>=1.1.0  # Apache-2.0
-oslo.i18n>=1.0.0  # Apache-2.0
-oslo.log>=0.1.0  # Apache-2.0
-oslo.serialization>=1.0.0               # Apache-2.0
-oslo.utils>=1.1.0                       # Apache-2.0
-oslo.vmware>=0.9.0                      # Apache-2.0
+stevedore>=1.3.0,<1.4.0  # Apache-2.0
+oslo.concurrency>=1.8.0,<1.9.0         # Apache-2.0
+oslo.config>=1.9.3,<1.10.0  # Apache-2.0
+oslo.db>=1.7.0,<1.8.0  # Apache-2.0
+oslo.i18n>=1.5.0,<1.6.0  # Apache-2.0
+oslo.log>=1.0.0,<1.1.0  # Apache-2.0
+oslo.serialization>=1.4.0,<1.5.0               # Apache-2.0
+oslo.utils>=1.4.0,<1.5.0                       # Apache-2.0
+oslo.vmware>=0.11.1,<0.12.0 # Apache-2.0
