--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,8 @@ setenv = VIRTUAL_ENV={envdir}
          PYTHONHASHSEED=0
 usedevelop = True
 install_command = pip install -U {opts} {packages}
-deps = -r{toxinidir}/requirements.txt
+deps = -egit+https://git.openstack.org/openstack/neutron@stable/kilo#egg=neutron
+       -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 whitelist_externals = sh
 commands =
