--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,8 @@ packages =
 [entry_points]
 console_scripts =
     neutron-check-nsx-config = vmware_nsx.neutron.plugins.vmware.check_nsx_config:main
+neutron.service_plugins =
+    vmware_nsx_l2gw = vmware_nsx.neutron.services.l2gateway.plugin:NsxL2GatewayPlugin
 vmware_nsx.neutron.nsxv.router_type_drivers =
     shared = vmware_nsx.neutron.plugins.vmware.plugins.nsx_v_drivers.shared_router_driver:RouterSharedDriver
     distributed = vmware_nsx.neutron.plugins.vmware.plugins.nsx_v_drivers.distributed_router_driver:RouterDistributedDriver
