NsxV3: external network support
external network is attached to default tier0 router by default, else
attached to tier0 via --provider:physical_network

DocImpact
Change-Id: I3fa4e1a6955d47f68f86b36f214ce4a43daefe5b

--- a/vmware_nsx/etc/nsx.ini
+++ b/vmware_nsx/etc/nsx.ini
@@ -323,3 +323,7 @@
 # If true, the NSX Manager server certificate is not verified. If false,
 # then the default CA truststore is used for verification.
 # insecure = True
+
+# UUID of the default tier0 router that will be used for connecting to
+# tier1 logical routers and configuring external network
+# default_tier0_router_uuid = 412983fd-9016-45e5-93f2-48ba2a931225
