NSXv3: Add backend driver for Layer 2 gateway
This patch adds the backend driver to support Layer 2 gateway
API calls for NSXv3.

Change-Id: Iec1e143115579cca6c8158188217ead4209959bd
Partial-bug: #1481087

--- a/etc/nsx.ini
+++ b/etc/nsx.ini
@@ -225,6 +225,10 @@
 # "service".
 # replication_mode = service
 
+# Specify the class path for the Layer 2 gateway backend driver(i.e. NSXv3/NSX-V).
+# This field will be used when a L2 Gateway service plugin is configured.
+# nsx_l2gw_driver = vmware_nsx.neutron.services.l2gateway.nsx_v3_driver.NsxV3Driver
+
 [nsx_sync]
 # Interval in seconds between runs of the status synchronization task.
 # The plugin will aim at resynchronizing operational status for all
@@ -327,3 +331,11 @@
 # UUID of the default tier0 router that will be used for connecting to
 # tier1 logical routers and configuring external network
 # default_tier0_router_uuid = 412983fd-9016-45e5-93f2-48ba2a931225
+
+# UUID of the default NSX bridge cluster that will be used to perform
+# L2 gateway bridging between VXLAN and VLAN networks. It is an optional
+# field. If default bridge cluster UUID is not specified, admin will have to
+# manually create a L2 gateway corresponding to a NSX Bridge Cluster using
+# L2 gateway APIs.
+# This field must be specified on one of the active neutron servers only.
+# default_bridge_cluster_uuid =
