--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,8 @@ setenv = VIRTUAL_ENV={envdir}
          PYTHONHASHSEED=0
 usedevelop = True
 install_command = {toxinidir}/tools/tox_install.sh {opts} {packages}
-deps = -r{toxinidir}/requirements.txt
+deps = -egit+https://git.openstack.org/openstack/networking-l2gw#egg=networking-l2gw
+       -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 whitelist_externals = sh
 commands =
