NSX: Move DB models as part of core vendor decomposition
As part of core vendor decomposition, this patch moves the models
from neutron repository to vmware-nsx repository.

Change-Id: I99f358af73fd80246aea0c40ecbeb8ce84f5453d
Depends-On: I5d5b0acf34417889c2a449f22b92fd105697d90d
Partial-bug: #1483453

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,8 @@ console_scripts =
     neutron-check-nsx-config = vmware_nsx.neutron.plugins.vmware.check_nsx_config:main
 neutron.db.alembic_migrations =
     vmware-nsx = vmware_nsx.neutron.db.migration:alembic_migrations
+neutron.core_plugins =
+    vmware = vmware_nsx.neutron.plugins.vmware.plugin:NsxMhPlugin
 neutron.service_plugins =
     vmware_nsx_l2gw = vmware_nsx.neutron.services.l2gateway.plugin:NsxL2GatewayPlugin
 vmware_nsx.neutron.nsxv.router_type_drivers =
