--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,8 @@ packages =
 [entry_points]
 console_scripts =
     neutron-check-nsx-config = vmware_nsx.neutron.plugins.vmware.check_nsx_config:main
+neutron.db.alembic_migrations =
+    vmware-nsx = vmware_nsx.neutron.db.migration:alembic_migrations
 neutron.service_plugins =
     vmware_nsx_l2gw = vmware_nsx.neutron.services.l2gateway.plugin:NsxL2GatewayPlugin
 vmware_nsx.neutron.nsxv.router_type_drivers =
