Adds CRD operations for NSX Qos Service Plugin
This is an initial patch; only adds support for:
neutron qos-policy-create
neutron qos-policy-show
neutron qos-policy-list
neutron qos-policy-delete

Change-Id: I01572452bd72834b73b6e4b542d70400540d1b7c

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ neutron.core_plugins =
     vmware = vmware_nsx.neutron.plugins.vmware.plugin:NsxMhPlugin
 neutron.service_plugins =
     vmware_nsx_l2gw = vmware_nsx.neutron.services.l2gateway.plugin:NsxL2GatewayPlugin
+    vmware_nsx_qos = vmware_nsx.neutron.services.qos.plugin:NsxQosPlugin
 vmware_nsx.neutron.nsxv.router_type_drivers =
     shared = vmware_nsx.neutron.plugins.vmware.plugins.nsx_v_drivers.shared_router_driver:RouterSharedDriver
     distributed = vmware_nsx.neutron.plugins.vmware.plugins.nsx_v_drivers.distributed_router_driver:RouterDistributedDriver
