NSX: Register migrations at install time
This allows neutron-db-manage to find alembic migrations for
vmware-nsx repo.

Partial-Bug: #1470625
Change-Id: Icf2d68002ec79c75b4897f6b0bee5180570abe67

--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,7 @@ downloadcache = ~/cache/pip
 commands =
   sh ./tools/check_bash.sh
   flake8
+  neutron-db-manage --subproject vmware-nsx check_migration
 whitelist_externals = sh
 
 [testenv:i18n]
