--- a/tox.ini
+++ b/tox.ini
@@ -27,18 +27,25 @@ setenv = VIRTUAL_ENV={envdir}
 
 [testenv:functional]
 setenv = OS_TEST_TIMEOUT=90
+deps =
+  {[testenv]deps}
+  -r{toxinidir}/vmware_nsx/neutron/tests/functional/requirements.txt
 
 [testenv:dsvm-functional]
 setenv = OS_SUDO_TESTING=1
          OS_FAIL_ON_MISSING_DEPS=1
          OS_TEST_TIMEOUT=90
 sitepackages=True
+deps =
+  {[testenv:functional]deps}
 
 [tox:jenkins]
 sitepackages = True
 downloadcache = ~/cache/pip
 
 [testenv:pep8]
+deps =
+  {[testenv]deps}
 commands =
   sh ./tools/check_bash.sh
   flake8
