Deploy NSX Edges in HA mode
Adds support for High Availability for networking services
provisioned from NSX-v Neutron plugin

DocImpact
Partial-Bug: #1487624

Change-Id: Ie972bc79df98667156660348e8fa2b0e5cf08445

--- a/vmware_nsx/etc/nsx.ini
+++ b/vmware_nsx/etc/nsx.ini
@@ -137,6 +137,8 @@
 # port-security feature.
 # spoofguard_enabled = True
 
+# (Optional) Deploys NSX Edges in HA mode
+# edge_ha = True
 # (ListOpt) Ordered list of router_types to allocate as tenant routers.
 # It limits the router types that the Nsxv can support for tenants:
 # distributed: router is supported by distributed edge at the backend.
