Move nsx_l2gw_driver to DEFAULT section in nsx.ini
Currently the nsx_l2gw_driver option exists in the base_opts in
config, which mostly belongs to NSX-MH. This patch proposes to move
it under DEFAULT section.

Change-Id: I0884f420debe14355d8bc0cf66ff2a418b2d4d78

--- a/etc/nsx.ini
+++ b/etc/nsx.ini
@@ -44,6 +44,10 @@
 # Reconnect connection to nsx if not used within this amount of time.
 # conn_idle_timeout = 900
 
+# Specify the class path for the Layer 2 gateway backend driver(i.e. NSXv3/NSX-V).
+# This field will be used when a L2 Gateway service plugin is configured.
+# nsx_l2gw_driver =
+
 [quotas]
 # number of network gateways allowed per tenant, -1 means unlimited
 # quota_network_gateway = 5
@@ -224,10 +228,6 @@
 # In order to leverage distributed routers, replication_mode should be set to
 # "service".
 # replication_mode = service
-
-# Specify the class path for the Layer 2 gateway backend driver(i.e. NSXv3/NSX-V).
-# This field will be used when a L2 Gateway service plugin is configured.
-# nsx_l2gw_driver = vmware_nsx.services.l2gateway.nsx_v3.driver.NsxV3Driver
 
 [nsx_sync]
 # Interval in seconds between runs of the status synchronization task.
