--- a/vmware_nsx/etc/nsx.ini
+++ b/vmware_nsx/etc/nsx.ini
@@ -58,6 +58,14 @@
 # Password for NSXv manager
 # password = default
 
+# Specify a CA bundle file to use in verifying the NSXv server certificate.
+# ca_file =
+
+# If true, the NSXv server certificate is not verified. If false,
+# then the default CA truststore is used for verification. This option
+# is ignored if "ca_file" is set.
+# insecure = true
+
 # (Required) Datacenter ID for Edge deployment
 # datacenter_moid =
 
