[NSXv3]: Add sample conf variables to nsx.ini
Change-Id: Ie119e0e35406bdaba2e0828c9aecb4bd231ab247

--- a/vmware_nsx/etc/nsx.ini
+++ b/vmware_nsx/etc/nsx.ini
@@ -289,3 +289,27 @@
 # shared secret to prevent spoofing. You may select any string for a secret,
 # but it MUST match with the configuration used by the Metadata server
 # metadata_shared_secret =
+
+[nsx_v3]
+# IP address of NSX manager
+# nsx_manager = 1.2.3.4
+
+# User name of NSX Manager
+# nsx_user = admin
+
+# Password of NSX Manager
+# nsx_password = default
+
+# UUID of the default NSX overlay transport zone that will be used for creating
+# tunneled isolated Neutron networks
+# default_overlay_tz_uuid = afc40f8a-4967-477e-a17a-9d560d1786c7
+
+# UUID of default NSX VLAN transport zone that will be used for bridging
+# between Neutron Networks
+# default_vlan_tz_uuid = afc40f8a-4967-477e-a17a-9d560d1786c7
+
+# Default Edge Cluster Identifier
+# default_edge_cluster_uuid = afc40f8a-4967-477e-a17a-9d560d1786c7
+
+# Maximum number of times to retry API requests
+# retries = 10
