Add support to NSXv3 driver to verify certs
NSXv3 driver was missing certification verification. This patch
add cert verification

DocImpact
Closes-Bug: #1488692

Change-Id: I8892103225b62ccc526e91e688f01f4150b42cc6

--- a/vmware_nsx/etc/nsx.ini
+++ b/vmware_nsx/etc/nsx.ini
@@ -315,3 +315,12 @@
 
 # Maximum number of times to retry API requests
 # retries = 10
+
+# Specify a CA bundle file to use in verifying the NSX Manager
+# server certificate.
+# ca_file =
+
+# If true, the NSX Manager server certificate is not verified. If false,
+# then the default CA truststore is used for verification. This option
+# is ignored if "ca_file" is set.
+# insecure = true
