Fix comment concerning metadata agentless mode
agentless metadata mode works only in NSX-mh 4.1 - nsx.ini
incorrectly states is supported from 4.2 onwards.

Change-Id: I315665ffdd3f36205dba9e02a3a9dfaca12d0faf

--- a/vmware_nsx/etc/nsx.ini
+++ b/vmware_nsx/etc/nsx.ini
@@ -207,11 +207,11 @@
 # the plugin will use NSX logical services for DHCP and metadata proxy. This
 # simplifies the deployment model for Neutron, in that the plugin no longer requires
 # the RPC agents to operate. When 'agentless' is chosen, the config option metadata_mode
-# becomes ineffective. The 'agentless' mode is supported from NSX 4.2 or above.
+# becomes ineffective. The 'agentless' mode works only on NSX 4.1.
 # Furthermore, a 'combined' mode is also provided and is used to support existing
-# deployments that want to adopt the agentless mode going forward. With this mode,
-# existing networks keep being served by the existing infrastructure (thus preserving
-# backward compatibility, whereas new networks will be served by the new infrastructure.
+# deployments that want to adopt the agentless mode. With this mode, existing networks
+# keep being served by the existing infrastructure (thus preserving backward
+# compatibility, whereas new networks will be served by the new infrastructure.
 # Migration tools are provided to 'move' one network from one model to another; with
 # agent_mode set to 'combined', option 'network_auto_schedule' in neutron.conf is
 # ignored, as new networks will no longer be scheduled to existing dhcp agents.
