Stop doing any magic cloning of neutron during CI
Hopefully this will allow the Zuul "Depends-On" thing to work better.
Adopting the solution developed by Doug Wiegley for LBaaS:
c61f920f2a54fd829ee37484b3743ab77b909847 and then shamelessly stolen
from armando-migliaccio here: If358edd5cf34fd63b508dc089615bf19d59ee334

Change-Id: I69c53bb2098b30927726e03c6c492a2fb58d4cc2

--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,8 @@ skipsdist = True
 setenv = VIRTUAL_ENV={envdir}
          PYTHONHASHSEED=0
 usedevelop = True
-install_command = pip install -U {opts} {packages}
-deps = -egit+https://git.openstack.org/openstack/neutron#egg=neutron
-       -r{toxinidir}/requirements.txt
+install_command = {toxinidir}/tools/tox_install.sh {opts} {packages}
+deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 whitelist_externals = sh
 commands =
