Fix a typo in comments true -> True
Fallout of df460ec6dd221219033a5cc81607b1d07cb06b90

Change-Id: Id3caf1c944789fe055eeb7826de82d49de8732e1

--- a/vmware_nsx/etc/nsx.ini
+++ b/vmware_nsx/etc/nsx.ini
@@ -323,4 +323,4 @@
 # If true, the NSX Manager server certificate is not verified. If false,
 # then the default CA truststore is used for verification. This option
 # is ignored if "ca_file" is set.
-# insecure = true
+# insecure = True
