Fix a typo in comments in nsx.ini
Change-Id: Ia46201b7457305a47ec3b7310154f237871f2e9c

--- a/vmware_nsx/etc/nsx.ini
+++ b/vmware_nsx/etc/nsx.ini
@@ -317,10 +317,9 @@
 # retries = 10
 
 # Specify a CA bundle file to use in verifying the NSX Manager
-# server certificate.
+# server certificate. This option is ignored if "insecure" is set to True.
 # ca_file =
 
 # If true, the NSX Manager server certificate is not verified. If false,
-# then the default CA truststore is used for verification. This option
-# is ignored if "ca_file" is set.
+# then the default CA truststore is used for verification.
 # insecure = True
