--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = vmware-nsx
+version = 7.0.0
 summary = VMware NSX library for OpenStack projects
 description-file =
     README.rst
