Update references for vmware plugin config (etc part)
Because vmware plugin config nsx.ini is now moved
from neutron:/etc/neutron/plugins/vmware/ to vmware-nsx:/etc/,
we need to update associated references in setup.cfg.

The new path to nsx.ini is defined in Q_PLUGIN_SRC_CONF_PATH.

This is the first part of vmware plugin decomposition
(etc, extensions, and database).

Partial-bug: #1483453
Depends-On: I3caf25ce91ff425d815f35ed3efd599a572d595b
Change-Id: I326dc1eaf549ac631caf71e9adc3c7a218a7723f

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,9 @@ classifier =
 [files]
 packages =
     vmware_nsx
+data_files =
+    etc/neutron/plugins/vmware = etc/nsx.ini
+
 [entry_points]
 console_scripts =
     neutron-check-nsx-config = vmware_nsx.neutron.plugins.vmware.check_nsx_config:main
