Move vmware_nsx/neutron/db to vmware_nsx/db
This is part of new vmware_nsx directory structure proposed in
https://goo.gl/GdWXyH.

Change-Id: I50468e8ecf81a636ac6a0f195c75b4bef25423b4

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ data_files =
 console_scripts =
     neutron-check-nsx-config = vmware_nsx.neutron.plugins.vmware.check_nsx_config:main
 neutron.db.alembic_migrations =
-    vmware-nsx = vmware_nsx.neutron.db.migration:alembic_migrations
+    vmware-nsx = vmware_nsx.db.migration:alembic_migrations
 neutron.core_plugins =
     vmware = vmware_nsx.neutron.plugins.vmware.plugin:NsxMhPlugin
 neutron.service_plugins =
