Move vmware_nsx/neutron/services to vmware_nsx/services
This is part of new vmware_nsx directory structure proposed in
https://goo.gl/GdWXyH.

Change-Id: I9207851bd1db3c005efa6880ca717058fde7707d

--- a/etc/nsx.ini
+++ b/etc/nsx.ini
@@ -227,7 +227,7 @@
 
 # Specify the class path for the Layer 2 gateway backend driver(i.e. NSXv3/NSX-V).
 # This field will be used when a L2 Gateway service plugin is configured.
-# nsx_l2gw_driver = vmware_nsx.neutron.services.l2gateway.nsx_v3_driver.NsxV3Driver
+# nsx_l2gw_driver = vmware_nsx.services.l2gateway.nsx_v3_driver.NsxV3Driver
 
 [nsx_sync]
 # Interval in seconds between runs of the status synchronization task.
