Divide vmware_nsx/services into plugin-specific subdirectories
This patch will create:
vmware_nsx/services/common for common plugin files
vmware_nsx/services/nsx_v3 for nsx_v3 specific plugin files

This is part of new vmware_nsx directory structure proposed in
https://goo.gl/GdWXyH.

Change-Id: I30753aef1c06e2a1b15d336e1d661f3b44ea669e

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ neutron.db.alembic_migrations =
 neutron.core_plugins =
     vmware = vmware_nsx.plugin:NsxMhPlugin
 neutron.service_plugins =
-    vmware_nsx_l2gw = vmware_nsx.services.l2gateway.plugin:NsxL2GatewayPlugin
+    vmware_nsx_l2gw = vmware_nsx.services.l2gateway.common.plugin:NsxL2GatewayPlugin
     vmware_nsx_qos = vmware_nsx.services.qos.plugin:NsxQosPlugin
 vmware_nsx.neutron.nsxv.router_type_drivers =
     shared = vmware_nsx.plugins.nsx_v_drivers.shared_router_driver:RouterSharedDriver
