Divide vmware_nsx/plugins into plugin-specific subdirectories
This patch will create:
vmware_nsx/plugins/dvs for DVS specific files
vmware_nsx/plugins/nsx_mh for MH specific files
vmware_nsx/plugins/nsx_v for nsx_v specific files
vmware_nsx/plugins/nsx_v3 for nsx_v3 specific files

also move vmware_nsx/vsphere/ to vmware_nsx/plugins/nsx_v/vsphere/.

This is part of new vmware_nsx directory structure proposed in
https://goo.gl/GdWXyH.

Change-Id: I00ee12da2eea0add988bae3d4f3e12940ea829bb

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,9 +35,9 @@ neutron.service_plugins =
     vmware_nsx_l2gw = vmware_nsx.services.l2gateway.common.plugin:NsxL2GatewayPlugin
     vmware_nsx_qos = vmware_nsx.services.qos.plugin:NsxQosPlugin
 vmware_nsx.neutron.nsxv.router_type_drivers =
-    shared = vmware_nsx.plugins.nsx_v_drivers.shared_router_driver:RouterSharedDriver
-    distributed = vmware_nsx.plugins.nsx_v_drivers.distributed_router_driver:RouterDistributedDriver
-    exclusive = vmware_nsx.plugins.nsx_v_drivers.exclusive_router_driver:RouterExclusiveDriver
+    shared = vmware_nsx.plugins.nsx_v.drivers.shared_router_driver:RouterSharedDriver
+    distributed = vmware_nsx.plugins.nsx_v.drivers.distributed_router_driver:RouterDistributedDriver
+    exclusive = vmware_nsx.plugins.nsx_v.drivers.exclusive_router_driver:RouterExclusiveDriver
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
