NSX|V: set the edge_ha default state to be False
This is required to ensure backward comapatibility.

Change-Id: I1c912fcca8bd81aa86f9729885b7780ac564fd44
Closes-bug: #1499181

--- a/etc/nsx.ini
+++ b/etc/nsx.ini
@@ -142,7 +142,7 @@
 # spoofguard_enabled = True
 
 # (Optional) Deploys NSX Edges in HA mode
-# edge_ha = True
+# edge_ha = False
 # (ListOpt) Ordered list of router_types to allocate as tenant routers.
 # It limits the router types that the Nsxv can support for tenants:
 # distributed: router is supported by distributed edge at the backend.
