[NSXv]: Add conf param for exclusive router edge size
Allows user to specify default exclusive_router_appliance_size in
nsx.ini file. If --router-size isn't specified in neutron router-create CLI
command; exclusive_router_appliance_size will be picked up

DocImpact

Change-Id: I010bfdb8c5807bb933085f049326082c8b5782dc

--- a/etc/nsx.ini
+++ b/etc/nsx.ini
@@ -143,6 +143,13 @@
 
 # (Optional) Deploys NSX Edges in HA mode
 # edge_ha = False
+
+# (Optional) Edge appliance size to be used for creating exclusive router.
+# Valid values: ['compact', 'large', 'xlarge', 'quadlarge']
+# This exclusive_router_appliance_size will be picked up if --router-size
+# parameter is not specified while doing neutron router-create
+# exclusive_router_appliance_size = compact
+
 # (ListOpt) Ordered list of router_types to allocate as tenant routers.
 # It limits the router types that the Nsxv can support for tenants:
 # distributed: router is supported by distributed edge at the backend.
