--- a/setup.cfg
+++ b/setup.cfg
@@ -65,3 +65,18 @@ autodoc_index_modules = 1
 
 [wheel]
 universal = 1
+
+
+[compile_catalog]
+directory = vmware_nsx/locale
+domain = vmware_nsx
+
+[update_catalog]
+domain = vmware_nsx
+output_dir = vmware_nsx/locale
+input_file = vmware_nsx/locale/vmware_nsx.pot
+
+[extract_messages]
+keywords = _ gettext ngettext l_ lazy_gettext
+mapping_file = babel.cfg
+output_file = vmware_nsx/locale/vmware_nsx.pot
