Fix translation file names
It should have been in the directory vmware-nsx and not
vmware_nsx.

Change-Id: I40fd8dc1de15da367bacde0be019a4a04385b448

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,36 +47,21 @@ all_files = 1
 upload-dir = doc/build/html
 
 [compile_catalog]
-directory = vmware_nsx/locale
-domain = vmware_nsx
+directory = vmware-nsx/locale
+domain = vmware-nsx
 
 [update_catalog]
-domain = vmware_nsx
-output_dir = vmware_nsx/locale
-input_file = vmware_nsx/locale/vmware_nsx.pot
+domain = vmware-nsx
+output_dir = vmware-nsx/locale
+input_file = vmware-nsx/locale/vmware-nsx.pot
 
 [extract_messages]
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
-output_file = vmware_nsx/locale/vmware_nsx.pot
+output_file = vmware-nsx/locale/vmware-nsx.pot
 
 [pbr]
 autodoc_index_modules = 1
 
 [wheel]
 universal = 1
-
-
-[compile_catalog]
-directory = vmware_nsx/locale
-domain = vmware_nsx
-
-[update_catalog]
-domain = vmware_nsx
-output_dir = vmware_nsx/locale
-input_file = vmware_nsx/locale/vmware_nsx.pot
-
-[extract_messages]
-keywords = _ gettext ngettext l_ lazy_gettext
-mapping_file = babel.cfg
-output_file = vmware_nsx/locale/vmware_nsx.pot
