--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 # process, which may cause wedges in the gate later.
 pbr>=1.6
 
+enum34;python_version=='2.7' or python_version=='2.6'
 eventlet>=0.17.4
 httplib2>=0.7.5
 netaddr!=0.7.16,>=0.7.12
@@ -19,4 +20,5 @@ oslo.serialization>=1.10.0 # Apache-2.0
 oslo.service>=0.12.0 # Apache-2.0
 oslo.utils>=2.8.0 # Apache-2.0
 oslo.vmware>=1.16.0 # Apache-2.0
+PrettyTable>=0.7,<0.8
 tooz>=1.19.0 # Apache-2.0
