NSX|V3: improve configuration names
The configuration names nsx_* have been changed to nsx_api_*.
This better refelect the configuration and management of the NSX API
service.

Change-Id: I999f56efad1b413bc677a9de8b535f3f4785e4f5
Closes-bug: #1524659

--- a/etc/nsx.ini
+++ b/etc/nsx.ini
@@ -320,13 +320,13 @@
 #   [<scheme>://]<ip_adress>[:<port>]
 # If scheme is not provided https is used. If port is not provided
 # port 80 is used for http and port 443 for https.
-# nsx_managers = 1.2.3.4
+# nsx_api_managers = 1.2.3.4
 
 # User name of NSX Manager
-# nsx_user = admin
+# nsx_api_user = admin
 
 # Password of NSX Manager
-# nsx_password = default
+# nsx_api_password = default
 
 # UUID of the default NSX overlay transport zone that will be used for creating
 # tunneled isolated Neutron networks
