Clarify usage of NSXv3 default UUID settings
Change-Id: Ia676fae37f36c4260d3d2d564ed6b47f5253c189

--- a/etc/nsx.ini
+++ b/etc/nsx.ini
@@ -329,11 +329,13 @@
 # nsx_api_password = default
 
 # UUID of the default NSX overlay transport zone that will be used for creating
-# tunneled isolated Neutron networks
+# tunneled isolated Neutron networks. If no physical network is specified when
+# creating a logical network, this transport zone will be used by default
 # default_overlay_tz_uuid = afc40f8a-4967-477e-a17a-9d560d1786c7
 
-# UUID of default NSX VLAN transport zone that will be used for bridging
-# between Neutron Networks
+# (Optional) Only required when creating VLAN or flat provider networks. UUID
+# of default NSX VLAN transport zone that will be used for bridging between
+# Neutron networks, if no physical network has been specified
 # default_vlan_tz_uuid = afc40f8a-4967-477e-a17a-9d560d1786c7
 
 # Default Edge Cluster Identifier
@@ -364,13 +366,13 @@
 # conn_idle_timeout = 60
 
 # UUID of the default tier0 router that will be used for connecting to
-# tier1 logical routers and configuring external network
+# tier1 logical routers and configuring external networks
 # default_tier0_router_uuid = 412983fd-9016-45e5-93f2-48ba2a931225
 
-# UUID of the default NSX bridge cluster that will be used to perform
-# L2 gateway bridging between VXLAN and VLAN networks. It is an optional
-# field. If default bridge cluster UUID is not specified, admin will have to
-# manually create a L2 gateway corresponding to a NSX Bridge Cluster using
-# L2 gateway APIs.
-# This field must be specified on one of the active neutron servers only.
+# (Optional) UUID of the default NSX bridge cluster that will be used to
+# perform L2 gateway bridging between VXLAN and VLAN networks. It is an
+# optional field. If default bridge cluster UUID is not specified, admin will
+# have to manually create a L2 gateway corresponding to a NSX Bridge Cluster
+# using L2 gateway APIs. This field must be specified on one of the active
+# neutron servers only.
 # default_bridge_cluster_uuid =
