--- a/setup.cfg
+++ b/setup.cfg
@@ -21,14 +21,13 @@ classifier =
 [files]
 packages =
     vmware_nsx
-    tools
 data_files =
     etc/neutron/plugins/vmware = etc/nsx.ini
 
 [entry_points]
 console_scripts =
     neutron-check-nsx-config = vmware_nsx.check_nsx_config:main
-    nsxadmin = tools.python_nsxadmin.admin.shell:main
+    nsxadmin = vmware_nsx.shell.nsxadmin:main
 neutron.db.alembic_migrations =
     vmware-nsx = vmware_nsx.db.migration:alembic_migrations
 neutron.core_plugins =
