--- a/setup.cfg
+++ b/setup.cfg
@@ -51,18 +51,18 @@ all_files = 1
 upload-dir = doc/build/html
 
 [compile_catalog]
-directory = vmware-nsx/locale
-domain = vmware-nsx
+directory = vmware_nsx/locale
+domain = vmware_nsx
 
 [update_catalog]
-domain = vmware-nsx
-output_dir = vmware-nsx/locale
-input_file = vmware-nsx/locale/vmware-nsx.pot
+domain = vmware_nsx
+output_dir = vmware_nsx/locale
+input_file = vmware_nsx/locale/vmware_nsx.pot
 
 [extract_messages]
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
-output_file = vmware-nsx/locale/vmware-nsx.pot
+output_file = vmware_nsx/locale/vmware_nsx.pot
 
 [pbr]
 autodoc_index_modules = 1
