NSX-v3 http read timeout
This patch exposes a new config property named
http_read_timeout in the nsx_v3 group of nsx.ini
which allows users to configure a HTTP read timeout
separately from http connect timeout (set via http_timeout).
With this addition users can provide finer grained timeout
settings for their deployed env.

A unit test is also included.

backport: liberty

Change-Id: I6bcb142329e348c7b2224daf32bd3f648ff2af77
Closes-Bug: #1540462

--- a/etc/nsx.ini
+++ b/etc/nsx.ini
@@ -355,8 +355,11 @@
 # default system root CAs will be used.
 # insecure = True
 
-# The time in seconds before aborting an HTTP request to a NSX manager.
+# The time in seconds before aborting a HTTP connection to a NSX manager.
 # http_timeout = 75
+
+# The time in seconds before aborting a HTTP read response from a NSX manager.
+# http_read_timeout = 180
 
 # Maxiumum number of connection connections to each NSX manager.
 # concurrent_connections = 10
