NSX-v3 HTTP retries conf property
This patch adds a new conf property to the nsx.ini under the
nsx_v3 group called http_retries. This value is used for the
max retries used on HTTP requests. Additionally this patch
clarifies the use of http_retries vs retries in the conf properties.
A unit test is also included.

backport: liberty

Change-Id: Ifb0d1aaa6a11163f6520a6472ef743e3eab3ce38
Closes-Bug: #1540885

--- a/etc/nsx.ini
+++ b/etc/nsx.ini
@@ -341,7 +341,7 @@
 # Default Edge Cluster Identifier
 # default_edge_cluster_uuid = afc40f8a-4967-477e-a17a-9d560d1786c7
 
-# Maximum number of times to retry API requests
+# Maximum number of times to retry API requests upon stale revision errors.
 # retries = 10
 
 # Specify a CA bundle file to use in verifying the NSX Manager
@@ -360,6 +360,9 @@
 
 # The time in seconds before aborting a HTTP read response from a NSX manager.
 # http_read_timeout = 180
+
+# Maximum number of times to retry a HTTP connection.
+# http_retries = 3
 
 # Maxiumum number of connection connections to each NSX manager.
 # concurrent_connections = 10
