--- a/tox.ini
+++ b/tox.ini
@@ -82,7 +82,7 @@ commands = python setup.py build_sphinx
 ignore = E125,E126,E128,E129,E265,H305,H307,H402,H404,H405,H904
 show-source = true
 builtins = _
-exclude = .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,.ropeproject,devstack
+exclude = .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,.ropeproject
 
 [testenv:pylint]
 deps =
