NSXv3: Add missing config option details to nsx.ini
The number_of_nested_groups details is missing from nsx.ini,
adding it to provide better details to the user.

Change-Id: I5339d01c1ded0f37860b8bc8069683ae6d7e1627

--- a/etc/nsx.ini
+++ b/etc/nsx.ini
@@ -382,3 +382,12 @@
 # using L2 gateway APIs. This field must be specified on one of the active
 # neutron servers only.
 # default_bridge_cluster_uuid =
+
+# (Optional) The number of nested groups which are used by the plugin,
+# each Neutron security-groups is added to one nested group, and each nested
+# group can contain as maximum as 500 security-groups, therefore, the maximum
+# number of security groups that can be created is
+# 500 * number_of_nested_groups.
+# The default is 8 nested groups, which allows a maximum of 4k security-groups,
+# to allow creation of more security-groups, modify this figure.
+# number_of_nested_groups =
