nix.ini: fix typos
TrivialFix

Change-Id: Ib19f06a2a1070e1bccd482af8dfc72009d619665

--- a/etc/nsx.ini
+++ b/etc/nsx.ini
@@ -351,7 +351,7 @@
 # ca_file =
 
 # If true, the NSX Manager server certificate is not verified. If false
-# the CA bundle specified via "ca_file" will be used or if unsest the
+# the CA bundle specified via "ca_file" will be used or if unset the
 # default system root CAs will be used.
 # insecure = True
 
@@ -364,7 +364,7 @@
 # Maximum number of times to retry a HTTP connection.
 # http_retries = 3
 
-# Maxiumum number of connection connections to each NSX manager.
+# Maximum number of connection connections to each NSX manager.
 # concurrent_connections = 10
 
 # The amount of time in seconds to wait before ensuring connectivity to
