--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ oslo.utils>=3.5.0 # Apache-2.0
 oslo.vmware>=1.16.0 # Apache-2.0
 PrettyTable<0.8,>=0.7 # BSD
 tooz>=1.28.0 # Apache-2.0
+decorator>=3.4.0 # BSD
