Switch to using hacking checks from neutron-lib
Temporarily comment out the 'no neutron' check.

Change-Id: I34d5204c90aed34571dbdf6d501dbcb682d57d81
Partially-Implements: blueprint neutron-lib

--- a/tox.ini
+++ b/tox.ini
@@ -80,7 +80,9 @@ commands = python setup.py build_sphinx
 # H404 multi line docstring should start with a summary
 # H405 multi line docstring summary not separated with an empty line
 # H904 Wrap long lines in parentheses instead of a backslash
-ignore = E125,E126,E128,E129,E265,H305,H307,H402,H404,H405,H904
+# TODO(dougwig) -- uncomment this to test for remaining linkages
+# N530 direct neutron imports not allowed
+ignore = E125,E126,E128,E129,E265,H305,H307,H402,H404,H405,H904,N530
 show-source = true
 builtins = _
 exclude = .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,.ropeproject
@@ -95,7 +97,7 @@ commands =
 [hacking]
 import_exceptions = vmware_nsx._i18n,
                     vmware_nsx_tempest._i18n
-local-check-factory = neutron.hacking.checks.factory
+local-check-factory = neutron_lib.hacking.checks.factory
 
 [testenv:genconfig]
 commands = {toxinidir}/tools/generate_config_file_samples.sh
