--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ deps = -r{toxinidir}/requirements.txt
        git+https://git.openstack.org/openstack/neutron.git@master#egg=neutron
        git+https://git.openstack.org/openstack/networking-l2gw.git@master#egg=networking-l2gw
        git+https://git.openstack.org/openstack/neutron-lbaas.git@master#egg=neutron-lbaas
+       git+https://git.openstack.org/openstack/tap-as-a-service.git@master#egg=tap-as-a-service
 whitelist_externals = sh
 commands =
   {toxinidir}/tools/ostestr_compat_shim.sh {posargs}
