--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ deps = -r{toxinidir}/requirements.txt
        # release (branch) tags
        git+https://git.openstack.org/openstack/neutron.git@master#egg=neutron
        git+https://git.openstack.org/openstack/networking-l2gw.git@master#egg=networking-l2gw
+       git+https://git.openstack.org/openstack/networking-sfc.git@master#egg=networking-sfc
        git+https://git.openstack.org/openstack/neutron-lbaas.git@master#egg=neutron-lbaas
 whitelist_externals = sh
 commands =
