Prep for pbr warnerrors
As per [1] the next version of pbr will properly support pbr/Sphinx
warnerrors during doc builds. We should enable warnerrors upon
the next pbr release and verify our doc build completes successfully.

[1] http://lists.openstack.org/pipermail/openstack-dev/2016-June/097849.html

Change-Id: I20cbbefb9dce05770dafa37a6ee1a59afc29c218

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,10 @@ output_file = vmware_nsx/locale/vmware_nsx.pot
 
 [pbr]
 autodoc_index_modules = 1
+# NOTE(boden): enable and validate once a new version of pbr is released.
+# More info can be found on the ML:
+# http://lists.openstack.org/pipermail/openstack-dev/2016-June/097849.html
+#warnerrors = true
 
 [wheel]
 universal = 1
