Show statistics after running coverage
TrivialFix

Similar to what was done here: I98a350d5eb9c217c99adf151e207523601712316

Change-Id: I78d577b2dc0e2378ec88bb4e938a41b0b0333985

--- a/tox.ini
+++ b/tox.ini
@@ -61,6 +61,7 @@ commands = bandit -r vmware_nsx -n 5 -ll
 [testenv:cover]
 commands =
   python setup.py testr --coverage --testr-args='{posargs}'
+  coverage report
 
 [testenv:venv]
 commands = {posargs}
