Add native DHCP config in nsxv3 sample local.conf
Add the config options in sample local.conf file to support native
DHCP & metadata proxy.

Change-Id: I32ee4b85216aa94fa0e2624e35c765764f86f595

--- a/devstack/nsx_v3/kvm_compute_local.conf.sample
+++ b/devstack/nsx_v3/kvm_compute_local.conf.sample
@@ -30,3 +30,13 @@ VNCSERVER_PROXYCLIENT_ADDRESS=$VNCSERVER_LISTEN
 disable_service zookeeper
 #DEBUG=False
 #DEFAULT_VLAN_TZ_UUID=changeme     # Optional, for VLAN provider networks
+
+# Enable Logging
+LOGFILE=/opt/stack/logs/stack.sh.log
+VERBOSE=True
+LOG_COLOR=True
+SCREEN_LOGDIR=/opt/stack/logs
+
+NSX_MANAGER=<nsx-manager1-ip>
+NSX_USER=<nsx-manager-user>
+NSX_PASSWORD=<nsx-manager-password>
