--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,10 @@ deps = -r{toxinidir}/requirements.txt
        # TODO(boden): pulling the egg from git is fine for master, but
        # should be replaced with a package version in requirements for
        # release (branch) tags
-       git+https://git.openstack.org/openstack/neutron.git@master#egg=neutron
+       git+https://git.openstack.org/openstack/neutron.git@stable/newton#egg=neutron
        git+https://git.openstack.org/openstack/networking-l2gw.git@master#egg=networking-l2gw
        git+https://git.openstack.org/openstack/networking-sfc.git@master#egg=networking-sfc
-       git+https://git.openstack.org/openstack/neutron-lbaas.git@master#egg=neutron-lbaas
+       git+https://git.openstack.org/openstack/neutron-lbaas.git@stable/newton#egg=neutron-lbaas
        git+https://git.openstack.org/openstack/tap-as-a-service.git@master#egg=tap-as-a-service
 whitelist_externals = sh
 commands =
