OCS plugin + initial extensions support
Create an openstack client plugin for vmware nsx, and add the some of
the extensions suport: router-type, router-size, subnet dhcp-mtu and
dns-search-domain and port provider security groups and vnic index

Work for future patches:
- More unit tests (provider-security-groups)
- Add the rest of the extensions

Change-Id: I5b335de000b310cbcbb9a2f81483fd28f8d9afea

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,15 @@ oslo.config.opts =
     nsx = vmware_nsx.opts:list_opts
 networking_sfc.flowclassifier.drivers =
     vmware-nsxv-sfc = vmware_nsx.services.flowclassifier.nsx_v.driver:NsxvFlowClassifierDriver
+openstack.cli.extension =
+    nsxclient = vmware_nsx.osc.plugin
+openstack.nsxclient.v2 =
+    port_create = vmware_nsx.osc.v2.port:NsxCreatePort
+    port_set = vmware_nsx.osc.v2.port:NsxSetPort
+    router_create = vmware_nsx.osc.v2.router:NsxCreateRouter
+    router_set = vmware_nsx.osc.v2.router:NsxSetRouter
+    subnet_create = vmware_nsx.osc.v2.subnet:NsxCreateSubnet
+    subnet_set = vmware_nsx.osc.v2.subnet:NsxSetSubnet
 
 [build_sphinx]
 source-dir = doc/source
