Add security group extensions to OSC
Change-Id: Ic626c3efed3dfd90ae5045591f6949b2b81915b1

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,8 @@ openstack.nsxclient.v2 =
     port_set = vmware_nsx.osc.v2.port:NsxSetPort
     router_create = vmware_nsx.osc.v2.router:NsxCreateRouter
     router_set = vmware_nsx.osc.v2.router:NsxSetRouter
+    security_group_create = vmware_nsx.osc.v2.security_group:NsxCreateSecurityGroup
+    security_group_set = vmware_nsx.osc.v2.security_group:NsxSetSecurityGroup
     subnet_create = vmware_nsx.osc.v2.subnet:NsxCreateSubnet
     subnet_set = vmware_nsx.osc.v2.subnet:NsxSetSubnet
 
