--- a/tox.ini
+++ b/tox.ini
@@ -8,18 +8,9 @@ setenv = VIRTUAL_ENV={envdir}
          PYTHONWARNINGS=default::DeprecationWarning
 passenv = TRACE_FAILONLY GENERATE_HASHES http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
 usedevelop = True
-install_command =
-    pip install -U -c{env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
+install_command = {toxinidir}/tools/tox_install.sh {env:UPPER_CONSTRAINTS_FILE:https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt} {opts} {packages}
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-       # TODO(boden): pulling the egg from git is fine for master, but
-       # should be replaced with a package version in requirements for
-       # release (branch) tags
-       git+https://git.openstack.org/openstack/neutron.git@master#egg=neutron
-       git+https://git.openstack.org/openstack/networking-l2gw.git@master#egg=networking-l2gw
-       git+https://git.openstack.org/openstack/networking-sfc.git@master#egg=networking-sfc
-       git+https://git.openstack.org/openstack/neutron-lbaas.git@master#egg=neutron-lbaas
-       git+https://git.openstack.org/openstack/tap-as-a-service.git@master#egg=tap-as-a-service
 whitelist_externals = sh
 commands =
   {toxinidir}/tools/ostestr_compat_shim.sh {posargs}
