Don't include openstack/common in flake8 exclude list
There is no this directory openstack/common which was used to keep codes from
oslo-incubator, we have retired oslo-incubator. Removing openstack/common from
all OpenStack code in favor of the Oslo libraries is a project wide goal
for the Ocata release. So don't use this directory any more. We should drop it
for improving searching efficiency.

Change-Id: I23f918ee6cd9939bfd46c4bf77cf56c0995c6e35

--- a/tox.ini
+++ b/tox.ini
@@ -101,7 +101,7 @@ commands = sphinx-build -W -b html doc/source doc/build/html
 ignore = E125,E126,E128,E129,E265,H305,H307,H402,H404,H405,H904,N530
 show-source = true
 builtins = _
-exclude = .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,.ropeproject
+exclude = .venv,.git,.tox,dist,doc,*lib/python*,*egg,build,.ropeproject
 
 [hacking]
 import_exceptions = vmware_nsx._i18n,
