--- a/tox.ini
+++ b/tox.ini
@@ -16,10 +16,10 @@ deps = -r{toxinidir}/requirements.txt
        # should be replaced with a package version in requirements for
        # release (branch) tags
        git+https://git.openstack.org/openstack/neutron.git@stable/newton#egg=neutron
-       git+https://git.openstack.org/openstack/networking-l2gw.git@master#egg=networking-l2gw
-       git+https://git.openstack.org/openstack/networking-sfc.git@master#egg=networking-sfc
+       git+https://git.openstack.org/openstack/networking-l2gw.git@3421c8317fe62402d9ae1e0ac735c35b89c74574
+       git+https://git.openstack.org/openstack/networking-sfc.git@stable/newton#egg=networking-sfc
        git+https://git.openstack.org/openstack/neutron-lbaas.git@stable/newton#egg=neutron-lbaas
-       git+https://git.openstack.org/openstack/tap-as-a-service.git@master#egg=tap-as-a-service
+       git+https://git.openstack.org/openstack/tap-as-a-service.git@ab0be74f13aa57705bb106ee7bc1694ce73e0fe3
 whitelist_externals = sh
 commands =
   {toxinidir}/tools/ostestr_compat_shim.sh {posargs}
