Use Tap-as-aservice stable newton
Change-Id: Ibc129057d7aa78c6b7290c8d3c4393f61808d41a

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ deps = -r{toxinidir}/requirements.txt
        git+https://git.openstack.org/openstack/networking-l2gw.git@stable/newton#egg=networking-l2gw
        git+https://git.openstack.org/openstack/networking-sfc.git@stable/newton#egg=networking-sfc
        git+https://git.openstack.org/openstack/neutron-lbaas.git@stable/newton#egg=neutron-lbaas
-       git+https://git.openstack.org/openstack/tap-as-a-service.git@ab0be74f13aa57705bb106ee7bc1694ce73e0fe3
+       git+https://git.openstack.org/openstack/tap-as-a-service.git@stable/newton#egg=tap-as-a-service
 whitelist_externals = sh
 commands =
   {toxinidir}/tools/ostestr_compat_shim.sh {posargs}
